[tool.poetry]
name = "trying"
version = "0.1.0"
description = ""
authors = ["sam2800ml <sam2800ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
zenml = {extras = ["server"], version = "^0.62.0"}
mlflow = "^2.14.3"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
